--- a/style.css
+++ b/style.css
@@ -1581,9 +1581,12 @@ img {
 .gp-menu-title>h1,
 .gp-menu-title>h2,
 .gp-menu-title>h3 {
-  font-family: "Leckerli One";
-  font-weight: bold;
+  font-size: 40px;
+  font-family: "Pacifico";
+  color: var(--gp-scnd);
+  line-height: 1em;
   text-align: center;
+  display: inline-block;
 }
 
 .hr-line {
